<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
  android:layout_height="match_parent"
  >

  <View
    android:id="@+id/bg"
    android:layout_width="match_parent" android:layout_height="96dp" android:background="@color/colorPrimary"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/settings"
    app:srcCompat="@drawable/ic_settings"
    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="18dp" android:layout_marginStart="12dp"/>
  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/edit"
    app:srcCompat="@drawable/ic_edit"
    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="12dp"
    app:layout_constraintBottom_toBottomOf="@+id/settings"/>
  <ImageView
    android:layout_width="64dp"
    android:layout_height="64dp"
    android:id="@+id/avatar"
    tools:src="@drawable/ic_account"
    app:layout_constraintEnd_toStartOf="@+id/edit" android:layout_marginEnd="8dp"
    app:layout_constraintStart_toEndOf="@+id/settings" android:layout_marginStart="8dp"
    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="12dp"/>
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/wallet"
    android:text="@string/label_wallet"
    android:drawableStart="@drawable/ic_wallet"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@+id/bg" app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
    style="@style/setting_label"/>
  <TextView
    style="@style/setting_label"
    android:id="@+id/account"
    android:text="@string/label_account"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:drawableStart="@drawable/ic_wallet"
    app:layout_constraintStart_toStartOf="@+id/wallet" app:layout_constraintEnd_toEndOf="@+id/wallet"
    app:layout_constraintTop_toBottomOf="@+id/wallet"/>
  <TextView
    style="@style/setting_label"
    android:id="@+id/video"
    android:text="@string/label_video"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:drawableStart="@drawable/ic_wallet"
    android:layout_marginTop="16dp"
    app:layout_constraintStart_toStartOf="@+id/account" app:layout_constraintEnd_toEndOf="@+id/account"
    app:layout_constraintTop_toBottomOf="@+id/account"/>
  <TextView
    style="@style/setting_label"
    android:id="@+id/visitor"
    android:text="@string/label_visitor"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:drawableStart="@drawable/ic_wallet"
    app:layout_constraintStart_toStartOf="@+id/video" app:layout_constraintEnd_toEndOf="@+id/video"
    app:layout_constraintTop_toBottomOf="@+id/video"/>

  <TextView
    style="@style/setting_label"
    android:id="@+id/share"
    android:text="@string/label_share"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:drawableStart="@drawable/ic_wallet"
    android:layout_marginTop="16dp"
    app:layout_constraintStart_toStartOf="@+id/visitor" app:layout_constraintEnd_toEndOf="@+id/visitor"
    app:layout_constraintTop_toBottomOf="@+id/visitor"/>
  <TextView
    style="@style/setting_label"
    android:id="@+id/gift"
    android:text="@string/label_gift"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:drawableStart="@drawable/ic_wallet"
    app:layout_constraintStart_toStartOf="@+id/share" app:layout_constraintEnd_toEndOf="@+id/share"
    app:layout_constraintTop_toBottomOf="@+id/share"/>

  <TextView
    style="@style/setting_label"
    android:id="@+id/cservice"
    android:text="@string/label_cservice"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:drawableStart="@drawable/ic_wallet"
    android:layout_marginTop="16dp"
    app:layout_constraintStart_toStartOf="@+id/gift" app:layout_constraintEnd_toEndOf="@+id/gift"
    app:layout_constraintTop_toBottomOf="@+id/gift"/>
</androidx.constraintlayout.widget.ConstraintLayout>